--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-vicr/demo.gif filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
